--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,17 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+Cache simulator.sln
+*.db
+*.log
+Cache simulator/Debug/Cache simulator.tlog/Cache simulator.lastbuildstate
+*.tlog
+Cache simulator/Debug/vc140.idb
+Cache simulator/Debug/vc140.pdb
+*.filters
+Cache simulator/Cache simulator.vcxproj
+Cache simulator/big_trace
+*.vcxproj
+Cache simulator/rules.txt
+*.ilk
+Debug/Cache simulator.pdb
